logo, icon and tersm and privacy page

--- a/privacy-terms.html
+++ b/privacy-terms.html
@@ -8,7 +8,9 @@
     <meta name="description" content="BizagLabs make apps that matter.">
     <meta name="author" content="BizagLabs">
 
-    <title>Bizag Labs</title>
+    <title>Privacy & Terms | BizagLabs</title>
+
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
