--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <title>Bizag Labs</title>
 
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
