--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
+                    <img src="img/know_your_past.webp" class="img-fluid" alt="">
                   </div>
                   <div class="button">
                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -91,7 +91,7 @@
             <h2 class="section-heading">Discover what all the buzz is about!</h2>
             <p>Our app is available on any mobile device! Download now to get started!</p>
             <div class="badges">
-              <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
+              <a title="Download Know Your Past" class="badge-link" href="https://play.google.com/store/apps/details?id=bizag.com.knowyourpastlife"><img src="img/google-play-badge.svg" alt=""></a>
               <!--<a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
             </div>
           </div>
@@ -113,9 +113,13 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-screen-smartphone text-primary"></i>
-                    <h3>Know your past</h3>
-                    <p class="text-muted">A fun app to know your past.</p>
+                      <i class="icon-screen-smartphone text-primary"></i>
+                      <h3>Know your past</h3>
+                      <p class="text-muted">A fun app to know your past.</p>
+                      <div class="badges">
+                          <a title="Download Know Your Past" class="badge-link" href="https://play.google.com/store/apps/details?id=bizag.com.knowyourpastlife"><img src="img/google-play-badge.svg" alt=""></a>
+                          <!--<a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
+                      </div>
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -150,12 +154,12 @@
           new friends!</h2>
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
-            <a href="https://twitter.com/bizaglabs">
+            <a href="https://twitter.com/bizaglabs" target="_blank">
               <i class="fa fa-twitter"></i>
             </a>
           </li>
           <li class="list-inline-item social-facebook">
-            <a href="https://www.facebook.com/bizaglabs">
+            <a href="https://www.facebook.com/bizaglabs" target="_blank">
               <i class="fa fa-facebook"></i>
             </a>
           </li>
