added fanstation Privacy terms

--- a/privacy-terms.html
+++ b/privacy-terms.html
@@ -71,14 +71,34 @@
                         <p><b>System and Services Description:</b></p>
                         <p>BizagLabs is a social network connecting fans with their favourite celebrities. BizagLabs also runs a crawler software that discovers and analyzes millions of news articles, blog posts, user posts, user comments, photos and videos shared on various social network platforms and the wider internet to provide personalized news discovery experience to it&#8217;s users. BizagLabs analyzes the sentiment around a particular story and topics along with it&#8217;s popularity on social networks which is further used to rank stories. Some of the key features of BizagLabs are:</p>
                         <p>•From hundreds of thousands of topics, users can select their interests to get a personalized story feed called “News” based on celebrity selection.</p>
-                        <p>•Tapping on buzz displayed with stories provides celebrity feeds.</p>
+                        <p>•From hundreds of thousands of topics, users can see  story feed called “Fanstation ”.</p>
+                        <p>•Tapping on like displayed with stories will be stored as liked.</p>
+ 			<p>•Tapping on share displayed with stories will be stored as shared.</p>
                         <p>•Clicking on the source displayed with stories provides source based feeds.</p>
-                        <p>•Users can view feeds of favourite celebrities containing pictures and videos to read later on any device.</p>
-                        <p>•BizagLabs users can showcase their talent to other fans of the community called as “FanWall”</p>
-                        <p>•Users can ask questions which is purely at the discretion of the celebrity to respond to them.</p>
+ 			<p>•Users can share the stories if they want.</p>
+                        <p>•Users can view their favourite activities containing pictures read later on any device.</p>
                     </div>
                     <p>•We may also collect Non-Personal Information about users whenever they interact with our apps. Non-Personal Information may include the information about your devices, including the list of installed apps on your devices, and technical information about users means of connection to our apps, such as the versions of phone model and other similar information.</p>
                     <div class="_4y5k">
+		 <p>•We may also collect Non-Personal Information about users whenever they interact with our apps. Non-Personal Information may include the information about your devices, including the list of installed apps on your devices, and technical information about users means of connection to our apps, such as the versions of phone model and other similar information.</p>
+                    <div class="_4y5k">
+
+			<p><b>What personal information do we collect from the people that visit our website or app?:</b></p>
+			<p>When ordering or registering on our app, as appropriate, you may be asked to enter your name, email address, phone number or other details to help you with your experience.</p>
+			<p><b>When do we collect information?</b></p>
+			<p>We collect information from you when you register on our app or site</p>
+
+			<p><b>How do we use your information?</b>
+			<p>We may use the information we collect from you when you register,or use certain other site features in the following ways:</p>
+			<p>•To personalize user's experience and to allow us to deliver the type of content in which you are most interested.</p>
+                        <p>•To improve our website in order to better serve you.</p>
+			<p>•To allow us to better service you in responding to your customer service requests..</p>
+		 	<p>•To administer a contest, promotion, survey or other site feature..</p>
+			<p>•To ask for ratings and reviews of services or products</p>
+
+			<p><b>What Android Permissions required while using our mobile applications</b></p>
+			<p><b>Network access:</b> We use Full network access and View network connection permission to connect to internet for accessing various functionalities of the app</p>
+
                         <p><b>Modifications to the Service and Software.</b></p>
                         <p>BizagLabs uses proprietary algorithms to analyze and index data available from third party services such as websites, blogs and social networks and provides personalized news feeds and related posts to users. The ranking, placement and summaries of a story are algorithmically determined. We continuously work towards improving our algorithms to more accurately reflect the actual social sentiment and popularity of stories, photos and videos that we present to our users. Accordingly, we reserve the right at any time, with or without notice to you, to (a) modify our algorithms, and (b) modify or discontinue, temporarily or permanently, the Service (or any part thereof). You acknowledge that such modifications to our algorithms may result in changes to the quality or quantity of information in BizagLabs feeds. You agree that BizagLabs will not be liable to you or to any third party for any modification of our algorithms, or any modification, suspension or discontinuance of the Service.</p>
                         <p><b>Opting Out</b></p>
