Updated Privacy terms

--- a/privacy-terms.html
+++ b/privacy-terms.html
@@ -83,12 +83,12 @@
 		 <p>•We may also collect Non-Personal Information about users whenever they interact with our apps. Non-Personal Information may include the information about your devices, including the list of installed apps on your devices, and technical information about users means of connection to our apps, such as the versions of phone model and other similar information.</p>
                     <div class="_4y5k">
 
-			<p><b>What personal information do we collect from the people that visit our website or app?:</b></p>
+			<p><h4>What personal information do we collect from the people that visit our website or app?:</h4></p><br/>
 			<p>When ordering or registering on our app, as appropriate, you may be asked to enter your name, email address, phone number or other details to help you with your experience.</p>
-			<p><b>When do we collect information?</b></p>
+			<p><br/><h4>When do we collect information?</h4></p>
 			<p>We collect information from you when you register on our app or site</p>
 
-			<p><b>How do we use your information?</b>
+			    <p><br/><h4>How do we use your information?</h4></p>
 			<p>We may use the information we collect from you when you register,or use certain other site features in the following ways:</p>
 			<p>•To personalize user's experience and to allow us to deliver the type of content in which you are most interested.</p>
                         <p>•To improve our website in order to better serve you.</p>
@@ -96,12 +96,12 @@
 		 	<p>•To administer a contest, promotion, survey or other site feature..</p>
 			<p>•To ask for ratings and reviews of services or products</p>
 
-			<p><b>What Android Permissions required while using our mobile applications</b></p>
-			<p><b>Network access:</b> We use Full network access and View network connection permission to connect to internet for accessing various functionalities of the app</p>
+			<p><h4>What Android Permissions required while using our mobile applications</h4></p>
+			<p><h5>Network access:</h5> We use Full network access and View network connection permission to connect to internet for accessing various functionalities of the app</p>
 
                         <p><b>Modifications to the Service and Software.</b></p>
                         <p>BizagLabs uses proprietary algorithms to analyze and index data available from third party services such as websites, blogs and social networks and provides personalized news feeds and related posts to users. The ranking, placement and summaries of a story are algorithmically determined. We continuously work towards improving our algorithms to more accurately reflect the actual social sentiment and popularity of stories, photos and videos that we present to our users. Accordingly, we reserve the right at any time, with or without notice to you, to (a) modify our algorithms, and (b) modify or discontinue, temporarily or permanently, the Service (or any part thereof). You acknowledge that such modifications to our algorithms may result in changes to the quality or quantity of information in BizagLabs feeds. You agree that BizagLabs will not be liable to you or to any third party for any modification of our algorithms, or any modification, suspension or discontinuance of the Service.</p>
-                        <p><b>Opting Out</b></p>
+                        <p><h4>Opting Out</h4></p>
                         <p>BizagLabs uses user-generated activity and sentiment in the context of any Publisher&#8217;s content on social networks to provide the overall personalized and ranked news feed experience to it&#8217;s users. In this respect, BizagLabs allows both the users as well as publishers to opt-out from it&#8217;s platform. BizagLabs does not analyze non-public data unless you give us explicit permission to do so (such as when you log into the Service using Facebook or Twitter). If you are not a user of our Service and wish to opt-out your account for social signals, write to <a href="mailto:contact@BizagLabs.in">contact@BizagLabs.in</a></p>
                         <p>Publishers can opt-out from BizagLabs platform by sending an e-mail to contact [at] BizagLabs [dot] in.</p>
                         <p><b>BizagLabs API</b></p>
