--- a/privacy-terms.html
+++ b/privacy-terms.html
@@ -85,7 +85,7 @@
 
 			<p><h4>What personal information do we collect from the people that visit our website or app?:</h4></p>
 			<p>When ordering or registering on our app, as appropriate, you may be asked to enter your name, email address, phone number or other details to help you with your experience.</p>
-			<p><<h4>When do we collect information?</h4></p>
+			<p><h4>When do we collect information?</h4></p>
 			<p>We collect information from you when you register on our app or site</p>
 
 			    <p><br/><h4>How do we use your information?</h4></p>
